[gd_scene load_steps=29 format=3 uid="uid://b418sip2ykkmn"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_o4ao5"]
[ext_resource type="PackedScene" uid="uid://diq0ksf1jk0" path="res://scenes/component/random_audio_player_2d_component.tscn" id="2_8gdk6"]
[ext_resource type="PackedScene" uid="uid://bp1fcoum13ivo" path="res://scenes/ability/sword/sword_ability_controller.tscn" id="2_461ib"]
[ext_resource type="PackedScene" uid="uid://cxr7r8lu6oe7y" path="res://scenes/component/health_component.tscn" id="2_tb8y6"]
[ext_resource type="PackedScene" uid="uid://bw0mb15jrgilp" path="res://scenes/component/velocity_component.tscn" id="2_x048o"]
[ext_resource type="AudioStream" uid="uid://c0ogaiedeiemy" path="res://assets/audio/impactPlate_heavy_000.ogg" id="3_fokk8"]
[ext_resource type="Texture2D" uid="uid://bjjy8b4mro1u6" path="res://scenes/game_object/player/player.png" id="3_hre78"]
[ext_resource type="AudioStream" uid="uid://cut7nflalw300" path="res://assets/audio/impactPlate_heavy_001.ogg" id="4_6ow7p"]
[ext_resource type="AudioStream" uid="uid://dphsshsn18l" path="res://assets/audio/impactPlate_heavy_002.ogg" id="5_2kosn"]
[ext_resource type="AudioStream" uid="uid://d2y6ehd5hhat7" path="res://assets/audio/impactPlate_heavy_003.ogg" id="6_tbtcc"]
[ext_resource type="AudioStream" uid="uid://1eri541q6mxh" path="res://assets/audio/impactPlate_heavy_004.ogg" id="7_fm3gi"]
[ext_resource type="AudioStream" uid="uid://dp58eieikdlv3" path="res://assets/audio/impactPlate_light_000.ogg" id="8_y6j76"]
[ext_resource type="AudioStream" uid="uid://o0trrpww83y7" path="res://assets/audio/impactPlate_light_001.ogg" id="9_sxso4"]
[ext_resource type="AudioStream" uid="uid://bpfou7exp73au" path="res://assets/audio/impactPlate_light_002.ogg" id="10_24rgs"]
[ext_resource type="AudioStream" uid="uid://bo5gg1ccf00nq" path="res://assets/audio/impactPlate_light_003.ogg" id="11_10v0n"]
[ext_resource type="AudioStream" uid="uid://dl2gskjmiu7d5" path="res://assets/audio/impactPlate_light_004.ogg" id="12_7hsx2"]
[ext_resource type="AudioStream" uid="uid://dd34dhg7e046w" path="res://assets/audio/impactPlate_medium_000.ogg" id="13_w3tii"]
[ext_resource type="AudioStream" uid="uid://kb0oa4mh8c2y" path="res://assets/audio/impactPlate_medium_001.ogg" id="14_d80lh"]
[ext_resource type="AudioStream" uid="uid://b1cqdltuxy6oo" path="res://assets/audio/impactPlate_medium_002.ogg" id="15_i1f8r"]
[ext_resource type="AudioStream" uid="uid://botdhn8lsagxx" path="res://assets/audio/impactPlate_medium_003.ogg" id="16_0hrqy"]
[ext_resource type="AudioStream" uid="uid://bo44wu0cexauv" path="res://assets/audio/impactPlate_medium_004.ogg" id="17_8ui62"]

[sub_resource type="Animation" id="Animation_gslp4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_17wxs"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -8), Vector2(2.08189e-12, -12), Vector2(-2.63654e-08, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.812252, 2.63902, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jaxl"]
_data = {
"RESET": SubResource("Animation_gslp4"),
"walk": SubResource("Animation_17wxs")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcrvi"]
bg_color = Color(0.909804, 0.270588, 0.215686, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_3wxor"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e6vyu"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tidmb"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_o4ao5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1jaxl")
}

[node name="RandomAudioPlayer2DComponent" parent="." instance=ExtResource("2_8gdk6")]
streams = Array[AudioStream]([ExtResource("3_fokk8"), ExtResource("4_6ow7p"), ExtResource("5_2kosn"), ExtResource("6_tbtcc"), ExtResource("7_fm3gi"), ExtResource("8_y6j76"), ExtResource("9_sxso4"), ExtResource("10_24rgs"), ExtResource("11_10v0n"), ExtResource("12_7hsx2"), ExtResource("13_w3tii"), ExtResource("14_d80lh"), ExtResource("15_i1f8r"), ExtResource("16_0hrqy"), ExtResource("17_8ui62")])

[node name="VelocityComponent" parent="." instance=ExtResource("2_x048o")]
max_speed = 90
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_tb8y6")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_461ib")]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_qcrvi")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_3wxor")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Visuals"]
position = Vector2(2.08165e-12, -8)
texture = ExtResource("3_hre78")

[node name="CollisionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_e6vyu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, -5)
shape = SubResource("CircleShape2D_tidmb")
